--- a/styles.css
+++ b/styles.css
@@ -87,10 +87,12 @@ body, html {
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 2em;
+    width: 100%;
+    background-color: #f4f4f4;
 }
 
-#about { background-color: #e8f5e9; }
-#resume { background-color: #e3f2fd; }
-#portfolio { background-color: #fff3e0; }
-#contact { background-color: #fce4ec; }
+iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+}
